force-app/main/default/objects/Payments__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>Amount being paid</description>
    <inlineHelpText>Amount being paid</inlineHelpText>
    <label>Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>