force-app/main/default/objects/Payments__c/fields/NetSuite_Sync_Error__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Sync_Error__c</fullName>
    <description>Used by the Jitterbit integration and holds any error message when syncing NetSuite payments to SFDC</description>
    <label>NetSuite Sync Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>